--- a/styles/style.scss
+++ b/styles/style.scss
@@ -9,23 +9,26 @@
 :root {
     --clr-light: #fff;
     --clr-dark: #333;
-    --clr-primary: #fca311;
-    --clr-secondary: #14213d;
-    --clr-accent: #e5e5e5;
+    --clr-primary: #023e8a;
+    --clr-secondary: #eee;
+    --clr-accent: #1f62af;
+    --clr-toggle: #fca311;
 
     --foreground: var(--clr-dark);
     --background: var(--clr-light);
 
     --ff-title: 'Merriweather', serif;
     --ff-body: 'Roboto', sans-serif;
+    --mainsize: clamp(650px, 75%, 1000px);
 }
 
 .darkmode {
     --clr-light: #fff;
     --clr-dark: #333;
-    --clr-primary: #14213d;
-    --clr-secondary: #fca311;
-    --clr-accent: #444;
+    --clr-primary: #bbb;
+    --clr-secondary: #023e8a;
+    --clr-accent: rgb(161, 242, 253);
+    --clr-toggle: #fca311;
 
     --foreground: var(--clr-light);
     --background: var(--clr-dark);
@@ -58,7 +61,7 @@
     }
 
     .moon:hover {
-        color: var(--clr-primary);
+        color: var(--clr-toggle);
     }
 
     .sun {
@@ -77,7 +80,7 @@
     }
 
     .sun:hover {
-        color: var(--clr-secondary);
+        color: var(--clr-toggle);
     }
 
     footer img {
@@ -123,11 +126,19 @@ body {
     height: 100%;
 }
 
+body {
+    display: flex;
+    justify-content: center;
+}
+
 .container {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    padding: 1rem;
+    width: var(--mainsize);
     // align-items: stretch;
+    box-shadow: rgba(180, 180, 180, 0.19) 0px 10px 20px, rgba(163, 163, 163, 0.23) 0px 6px 6px;
 }
 
 main {
@@ -142,12 +153,113 @@ footer {
 
 // <--- header --->
 
-header {
+header,
+.book-form {
     display: flex;
     flex-direction: column;
-    padding: 1rem;
+    margin-left: 1rem;
 }
 
+
+// <--- main --->
+
+.form-row {
+    display: flex;
+    margin-bottom: 1rem;
+    margin-right: -4rem;
+    flex-wrap: wrap;
+    width: inherit;
+
+    label {
+        font-size: 1rem;
+        font-weight: 500;
+    }
+
+    input::placeholder {
+        color: #888;
+    }
+}
+
+.form-item {
+    display: flex;
+    flex-direction: column;
+    margin-right: 2rem;
+    margin-bottom: 0.5rem;
+
+
+    width: clamp(150px, 42%, 450px);
+
+    input,
+    select {
+        border-radius: 4px;
+        padding: 7px;
+        font-size: 14px;
+        height: initial;
+        background-color: var(--background);
+        color: var(--foreground);
+        border: 1px solid #bbb;
+    }
+}
+
+.error {
+    input {
+        border: 2px solid rgb(211, 12, 12);
+    }
+}
+
+.form-row,
+.table-container {
+    button {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border: none;
+        cursor: pointer;
+        font-weight: bold;
+        border-radius: 10px;
+    }
+}
+
+.form-row button {
+    font-size: 1.1rem;
+    width: 9rem;
+    height: 2.8rem;
+    color: var(--clr-secondary);
+    background-color: var(--clr-primary);
+    padding: 10px 40px;
+}
+
+.form-row button:hover {
+    background-color: var(--clr-accent);
+}
+
+// <--- table --->
+
+tr {
+    text-align: left;
+}
+
+table {
+    width: 100%;
+    button {
+        font-size: 0.8rem;
+        width: 4.2rem;
+        height: 1.8rem;
+        color: var(--clr-light);
+        background-color: #f44336;
+        padding: 7px 28px;
+        margin-top: 1rem;
+        margin-bottom: 1rem;
+    }
+
+    button:hover {
+        background-color: #da190b;
+    }
+}
+
+th, td {
+    border: 1px solid red;
+}
 
 // <--- footer --->
 
@@ -162,5 +274,16 @@ footer {
         height: 1.1rem;
         margin-bottom: -2px;
         margin-left: 4px;
+    }
+}
+
+@media (max-width: 650px) {
+    .container {
+        width: 600vw;
+    }
+
+    .form-row {
+        flex-direction: column;
+        width: 200%;
     }
 }
