--- a/styles/style.css
+++ b/styles/style.css
@@ -99,7 +99,7 @@ h2 {
 }
 
 h1 {
-  font-size: 3rem;
+  font-size: clamp(2.2rem, 5.5vw, 3rem);
 }
 
 a {
@@ -173,7 +173,7 @@ header h1 {
 header p {
   margin-bottom: 2rem;
   color: var(--clr-accent);
-  font-size: 1.1rem;
+  font-size: clamp(0.9rem, 1.5vw, 1.1rem);
   font-weight: 300;
 }
 
@@ -256,8 +256,8 @@ header p {
 
 .form-row button {
   font-size: 1.1rem;
-  width: 9rem;
-  height: 2.8rem;
+  width: 8.2rem;
+  height: 2.6rem;
   color: var(--clr-secondary);
   background-color: var(--clr-primary);
   padding: 10px 40px;
@@ -337,9 +337,10 @@ table .delete-toggle:hover {
 td {
   font-size: clamp(0.95rem, 1.6vw, 1.1rem);
   font-weight: 400;
-  word-break: break-all;
+  overflow-wrap: break-word;
   padding-top: 2rem;
   padding-bottom: 2rem;
+  padding-left: 1rem;
 }
 
 th:first-child {
@@ -372,15 +373,26 @@ footer img {
 }
 
 @media (max-width: 650px) {
+  body {
+    width: 100vw;
+    height: 100%;
+  }
   .container {
-    width: 600vw;
+    max-width: 600px;
+    height: 100vh;
+    -webkit-box-shadow: none;
+            box-shadow: none;
   }
   .form-row {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
-    width: 200%;
+    width: 95vw;
+  }
+  .form-row input,
+  .form-row select {
+    width: 80vw;
   }
   header {
     margin-left: 0rem;
