--- a/styles/style.scss
+++ b/styles/style.scss
@@ -106,7 +106,7 @@ h2 {
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: clamp(2.2rem, 5.5vw, 3rem);
 }
 
 a {
@@ -166,7 +166,7 @@ header h1 {
 header p {
     margin-bottom: 2rem;
     color: var(--clr-accent);
-    font-size: 1.1rem;
+    font-size: clamp(0.9rem, 1.5vw, 1.1rem);
     font-weight: 300;
 }
 
@@ -231,8 +231,8 @@ header p {
 
 .form-row button {
     font-size: 1.1rem;
-    width: 9rem;
-    height: 2.8rem;
+    width: 8.2rem;
+    height: 2.6rem;
     color: var(--clr-secondary);
     background-color: var(--clr-primary);
     padding: 10px 40px;
@@ -316,15 +316,17 @@ table {
 td {
     font-size: clamp(0.95rem, 1.6vw, 1.1rem);
     font-weight: 400;
-    word-break: break-all;
+    overflow-wrap: break-word;
     padding-top: 2rem;
     padding-bottom: 2rem;
+    padding-left: 1rem;
 }
 
 th:first-child {
     width: 40%;
     max-width: 400px
 }
+
 th:last-child {
     width: 15%;
 }
@@ -346,13 +348,26 @@ footer {
 }
 
 @media (max-width: 650px) {
+
+    body {
+        width: 100vw;
+        height: 100%;
+    }
+
     .container {
-        width: 600vw;
+        max-width: 600px;
+        height: 100vh;
+        box-shadow: none;
     }
 
     .form-row {
         flex-direction: column;
-        width: 200%;
+        width: 95vw;
+
+        input,
+        select {
+            width: 80vw;
+        }
     }
 
     header {
